OO-3303: Avoid flickering when changing slider value

--- a/src/main/webapp/static/themes/light/modules/_thirdparty.scss
+++ b/src/main/webapp/static/themes/light/modules/_thirdparty.scss
@@ -108,7 +108,8 @@
  */
  
 .o_slider_wrapper {
-	height:33px;
+	height: 33px;
+	overflow: hidden;
 }
 
 .ui-slider.ui-slider-horizontal.ui-widget-content {
